--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,8 @@
 :root {
   --main-bg-color: black;
   --main-txt-color: bisque;
+  --txt-size-large: 2rem;
+  --txt-size-xlarge: 8rem;
 }
 @font-face {
   font-family: Popins;
@@ -10,29 +12,49 @@
 }
 
 body {
-  margin: 2%;
   background-color: var(--main-bg-color);
   font-family: Popins;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: large;
 }
 
-.navStyle {
-  background-color: var(--main-bg-color) !important;
-  color: var(--main-txt-color);
-  font-size: 40px;
-  margin-left: 25%;
-  margin-right: 25%;
+.radioWrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 20% 60% 20%;
 }
 
-.clockStyle h3 {
+.navbarItem1 {
+  justify-self: center;
+  grid-row: 1;
+  grid-column: 1;
+  font-size: var(--txt-size-large);
+  margin-left: 2em;
+}
+
+.navbarItem2 {
+  grid-row: 1;
+  grid-column: 2;
+  font-size: var(--txt-size-large);
+  margin-left: 2em;
+}
+
+.navbarItem3 {
+  grid-row: 1;
+  grid-column: 3;
+  font-size: var(--txt-size-large);
+  margin-left: 2em;
+}
+
+
+.clockStyle  {
+  grid-column: 1/3;
+  grid-row: 2;
   color: var(--main-txt-color);
-  font-size: 90px;
-  margin: 6% 10% 10% 26%;
+  margin: 6% 0% 0% 20%;
 }
 
 .tempStyle {
+  grid-column: 1/3;
+  grid-row: 3;
   color: var(--main-txt-color);
   font-size: large;
   margin-left: 35%;
@@ -41,30 +63,32 @@ body {
   padding-top: 10px;
 }
 
+.largeClock{
+  grid-column: 1/3;
+  grid-row: 2;
+  font-size: var(--txt-size-xlarge);
+}
+
+.smallClock{
+  grid-row: 3;
+  grid-column: 1;
+  font-size: 20px;
+}
+
 .radioStyle {
-  background-color: var(--main-bg-color) !important;
   color: var(--main-txt-color);
-  font-size: 18px;
   align-items: center;
   height: 200px;
   width: auto;
-  padding-bottom: 20px;
-  overflow:hidden; 
   overflow-y:scroll;
 }
 
-.radioComponent h3 {
-    margin: 0 0 0 15px;
-    padding:0;
-    font-size: 22px;
-    direction:ltr;
-    
+.radioComponent {
+    grid-row: 2;
+    grid-column: 1/3;
 
 }
 .radioComponent{
   border-radius: 25px;
 }
 
-.radioButtonStyle {
-  width: 380px;
-}
