--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,8 @@
 :root {
   --main-bg-color: black;
   --main-txt-color: bisque;
-  --txt-size-large: 2rem;
-  --txt-size-xlarge: 8rem;
+  --txt-size-large: 3rem;
+  --txt-size-xlarge: 10rem;
 }
 @font-face {
   font-family: Popins;
@@ -18,8 +18,8 @@ body {
 
 .radioWrapper{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 20% 60% 20%;
+  grid-template-columns: 200px 400px 200px;
+  grid-template-rows: 100px 240px 100px;
 }
 
 .navbarItem1 {
@@ -27,7 +27,7 @@ body {
   grid-row: 1;
   grid-column: 1;
   font-size: var(--txt-size-large);
-  margin-left: 2em;
+  margin-left: 3em;
 }
 
 .navbarItem2 {
@@ -46,21 +46,17 @@ body {
 
 
 .clockStyle  {
-  grid-column: 1/3;
-  grid-row: 2;
+  grid-column: 1/2;
   color: var(--main-txt-color);
   margin: 6% 0% 0% 20%;
 }
 
 .tempStyle {
-  grid-column: 1/3;
+  grid-column: 3;
   grid-row: 3;
   color: var(--main-txt-color);
-  font-size: large;
-  margin-left: 35%;
-  margin-right: 20%;
-  margin-top: 3%;
-  padding-top: 10px;
+  font-size: small;
+
 }
 
 .largeClock{
@@ -72,20 +68,18 @@ body {
 .smallClock{
   grid-row: 3;
   grid-column: 1;
-  font-size: 20px;
+  font-size: 120px
 }
 
-.radioStyle {
+.radioStyle  {
   color: var(--main-txt-color);
-  align-items: center;
-  height: 200px;
   width: auto;
   overflow-y:scroll;
 }
 
 .radioComponent {
     grid-row: 2;
-    grid-column: 1/3;
+    grid-column: 1/4;
 
 }
 .radioComponent{
